--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
     <h1>Como Editar</h1>
     <ol>
         <li>Escolha o arquivo que será modificado com inclusão ou exclusão de item;</li>
+        <li>Carregar Arquivo;</li>
         <li>Preencha os campos - veja os exemplos ao passar o cursor no título dos campos;</li>
         <li>
-            Adicionar ou substituir. 
+            Adicionar ou substituir.
             <ul>
                 <li>Para adicionar, certifique-se de que o ID não esteja sendo usado. Você pode colocar quantos sufixos quiser (ex: mae-menu-editor-teste-2).</li>
             </ul>
